fix all codes.